# conan2-examples

./: README.md
docs/: comand_parameter.md  conanfile_intro.md  developed_package_management.md  global_cond.md  management_existed_packages.md  package_management.md  profile.md  settings_intro.md
executable/: CMakeLists.txt  conanfile.py  executable.md
executable/executable/: CMakeLists.txt
executable/executable/source/: main.cpp
executable/main/: CMakeLists.txt
executable/main/include/: Printer.h  Substract.h  Tool.h
executable/main/source/: Printer.cpp  Substract.cpp  Tool.cpp
executable/tests/: CMakeLists.txt
executable/tests/include/: test_1.h
executable/tests/source/: tests.cpp
